CurrentActions/src/objects/CurrentActionsAdmin__c.object
<CustomObject>
    <fields>
        <fullName>AWS_accessKeyId__c</fullName>
        <description>This is obtainable from the AWS console: https://console.aws.amazon.com/iam/home?region=us-west-2#users. It is highly recommended to use a dedicated IAM user that only has read access to S3.</description>
        <label>AWS Access Key Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_region__c</fullName>
        <defaultValue>&quot;us-west-2&quot;</defaultValue>
        <description>This should be your primary AWS region such as &quot;us-west&quot;</description>
        <label>AWS Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_secretAccessKey__c</fullName>
        <description>This is obtainable from the AWS console: https://console.aws.amazon.com/iam/home?region=us-west-2#users. It is highly recommended to use a dedicated IAM user that only has read access to S3.</description>
        <label>AWS Secret Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only one Admin object should be marked &quot;Active&quot; at any given time. This allows for storing / switching between configurations of AWS and in the future other services.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Configuration</label>
    <nameField>
        <label>CurrentActionsAdmin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>